--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.datasource.username=AniA
 spring.datasource.password=2642
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-students.avatar.dir.path=avatars 
-
-
+students.avatar.dir.path=avatars
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
