--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.show-sql=true
 students.avatar.dir.path=avatars
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
