--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,6 @@ students.avatar.dir.path=avatars
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
-logging.level.ru.hogwarts.school.service=DEBUG
+logging.level.ru.hogwarts.school=DEBUG
 server.port=8080
+spring.liquibase.enabled=false
